docs: add swagger document with category and menu
