# app/internal/delivery/http/v1/category.go
@@ -15,7 +15,6 @@ func (h *Handler) initUserCategoryRoutes(api *gin.RouterGroup) {
 		menus.PATCH("/:category_id", h.updateCategory)
 		menus.DELETE("/:category_id", h.deleteCategory)
 		menus.GET("", h.getAllCategoriesByUserId)
-		menus.GET("/:category_id", h.getCategoryById)
 	}
 }
 
@@ -29,6 +28,14 @@ type updateCategoryInput struct {
 	Identifier string `json:"identifier"`
 }
 
+// @Tags Categories
+// @Description Create category
+// @Produce json
+// @Accept json
+// @Param data body createCategoryInput true "JSON data"
+// @Param user_id path string true "User id"
+// @Success 200 {boolean} result
+// @Router /users/{user_id}/categories [post]
 func (h *Handler) createCategory(c *gin.Context) {
 	var inp createCategoryInput
 	userId := c.Param("user_id")
@@ -49,6 +56,15 @@ func (h *Handler) createCategory(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Categories
+// @Description Update category
+// @Produce json
+// @Accept json
+// @Param data body updateCategoryInput true "JSON data"
+// @Param user_id path string true "User id"
+// @Param category_id path int true "Category id"
+// @Success 200 {boolean} result
+// @Router /users/{user_id}/categories/{category_id} [patch]
 func (h *Handler) updateCategory(c *gin.Context) {
 	var inp updateCategoryInput
 	userId := c.Param("user_id")
@@ -76,6 +92,13 @@ func (h *Handler) updateCategory(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Categories
+// @Description Delete category
+// @Produce json
+// @Param user_id path string true "User id"
+// @Param category_id path int true "Category id"
+// @Success 200 {boolean} result
+// @Router /users/{user_id}/categories/{category_id} [delete]
 func (h *Handler) deleteCategory(c *gin.Context) {
 	userId := c.Param("user_id")
 	categoryIdStr := c.Param("category_id")
@@ -93,6 +116,13 @@ func (h *Handler) deleteCategory(c *gin.Context) {
 	c.IndentedJSON(http.StatusOK, true)
 }
 
+// @Tags Categories
+// @Description Get all categories by user id
+// @Produce json
+// @Param user_id path string true "User id"
+// @Param language query int true "Language"
+// @Success 200 {array} domain.Category
+// @Router /users/{user_id}/categories [get]
 func (h *Handler) getAllCategoriesByUserId(c *gin.Context) {
 	userId := c.Param("user_id")
 	languageIdStr := c.Query("language")
@@ -102,14 +132,11 @@ func (h *Handler) getAllCategoriesByUserId(c *gin.Context) {
 		return
 	}
 
-	menus, err := h.services.Categories.GetAllByUserId(c.Request.Context(), userId, languageId)
+	categories, err := h.services.Categories.GetAllByUserId(c.Request.Context(), userId, languageId)
 	if err != nil {
 		c.IndentedJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
 		return
 	}
 
-	c.IndentedJSON(http.StatusOK, menus)
-}
-func (h *Handler) getCategoryById(c *gin.Context) {
-	c.IndentedJSON(http.StatusOK, true)
+	c.IndentedJSON(http.StatusOK, categories)
 }
